--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,14 +8,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="author" content="Aaron Heuckroth" />
     <title>{{ page.title }}</title>
+
     <!-- Styles -->
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 60px;
         padding-bottom: 40px;
       }
     </style>
+
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
 
     <!--<link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">-->
 
@@ -41,6 +43,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
+            
           </button>
           <a class="brand" href="#">Aaron Heuckroth</a>
           <div class="nav-collapse collapse">
@@ -65,9 +68,9 @@
         </div>
       </div>
     </div>
-    <section>
+    <container>
       {{ content }}
-    </section>
+    </container>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
   </body>
