--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,8 +69,10 @@
       </div>
     </div>
       {{ content }}
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>-->
+    <script src="./assets/js/jquery-1.10.2.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+        <script src="./assets/js/derp2.js"></script>
   </body>
 
 </html>
