--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,10 +45,10 @@
             <span class="icon-bar"></span>
             
           </button>
-          <a class="brand" href="#">Aaron Heuckroth</a>
+          <a class="brand" href="./index.html">Aaron Heuckroth</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Blog</a></li>
+              <li class="active"><a href="./jekyll_index.html">Blog</a></li>
               <li><a href="./jekyll_index.html">About</a></li>
               <li><a href="#contact">Contact</a></li>
               <li class="dropdown">
