--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,12 +7,12 @@
             <span class="icon-bar"></span>
             
           </button>
-          <a class="brand" href="./index.html">Aaron Heuckroth</a>
+          <a class="brand" href="/">Aaron Heuckroth</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="./blog.html">Blog</a></li>
-              <li><a href="./about.html">About</a></li>
-              <li><a href="/contact.html">Contact</a></li>
+              <li><a href="/blog">Blog</a></li>
+              <li><a href="/about">About</a></li>
+              <li><a href="/contact">Contact</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                 <ul class="dropdown-menu">
