--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,16 +20,11 @@
   <link rel="stylesheet" href="/public/css/lanyon.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400">
   <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+  <script type="text/javascript" src="/public/js/paper-full.min.js"></script>
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
   <link rel="shortcut icon" href="/public/favicon.ico">
-
-  {% if page.custom_js %}
-    {% for js_file in page.custom_js %}
-      <script src='/public/js/{{js_file}}' type="text/javascript"></script>
-    {% endfor %}
-  {% endif %}
 
   <!-- RSS -->
   {% feed_meta %}
