--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -23,15 +23,19 @@
 
       <div class="container content">
         <h1>Archive of posts with {{ page.type }} '{{ page.title }}'</h1>
-			<ul class="posts">
-			  {% for post in page.posts %}
-			    <li>
-			      <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
-			      <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-			    </li>
-			  {% endfor %}
-</ul>
 
+	        <ul class="related-posts">
+		    {% for post in page.posts %}
+		      <li>
+		        <h3>
+		          <a href="{{ post.url }}">
+		            {{ post.title }}
+		            <small>{{ post.date | date_to_string }}</small>
+		          </a>
+		        </h3>
+		      </li>
+		    {% endfor %}
+		  </ul>
     </div>
 
   </body>
